--- a/npc/Kai.wikitext
+++ b/npc/Kai.wikitext
@@ -11,7 +11,7 @@
 | status = Alive
 }}
 
-'''kai''' is a human male in his late 20s, tall and slim, with black hair and dressed as a pirate . He is initially met standing at [[Raident Coast]] in a compound.
+'''Kai''' is a human male in his late 20s, tall and slim, with black hair and dressed as a pirate . He is initially met standing at [[Raident Coast]] in a compound.
 
 ==History==
 
